...

object MainScreenTestTags {
  // General
  const val MAIN_SCREEN = "mainScreen"
  const val TOP_APP_BAR = "topAppBar"
  const val APP_TITLE = "appTitle"
  const val PROFILE_BUTTON = "profileButton"
  const val BOTTOM_NAVIGATION_BAR = "bottomNavigationBar"

  // Bottom navigation items
  const val NAV_HOME = "navHome"
  const val NAV_SEARCH = "navSearch"
  const val NAV_SAMPLER = "navSampler"
...
          LazyColumn(
              modifier =
                  Modifier.fillMaxSize()
                      .padding(horizontal = 30.dp)
                      .testTag(MainScreenTestTags.LAZY_COLUMN_SAMPLE_LIST)) {
                // ----------------Discover Section-----------------
                item { SectionHeader(title = "Discover") }
                items(discoverSamples.chunked(2)) { samples -> SampleCardRow(samples) }

                // ----------------Followed Section-----------------
                item { SectionHeader(title = "Followed") }
                items(followedSamples.chunked(2)) { samples -> SampleCardRow(samples) }
              }
        }
      }
}

...
